
2011-01-05  Toru Takaishi <tortkis@mtlhc.com>

* deleted variable *mew-unread-check-exclude*

* changed key binding for "i" in *Mew unread* buffer.

* removed function mew-unread-retrieve

* show *received-email* buffer after receiving email.

* changed the way defining key bindings for mew-summary-mode.

* changed mew-scan-sentinel-hook behavior.
If it is +inbox buffer, call mew-unread-refile.

* separated a function mew-unread-refile from
  mew-pop-sentinel-non-biff-hook.

* added variable *mew-unread-color* for setting text colors.
It is an associated list of (keyword . color-text).
keyword: :unread, :inc and :dec

2011-01-02  Toru Takaishi <tortkis@mtlhc.com>

* fixed a bug of not updating the unread diff number in some cases.

* fixed a bug that visiting +queue or +draft is redirected to *Mew
  unread* buffer.

